@@ -632,6 +632,10 @@ static void LaunchTraceLogger(void);
 static void LaunchCodeDataLogger(void);
 static void LaunchRamWatch(void);
 static void LaunchRamSearch(void);
+static void CheatSearchEQ(void);
+static void CheatSearchNE(void);
+static void CheatSearchGT(void);
+static void CheatSearchLT(void);
 static void FA_SkipLag(void);
 static void OpenRom(void);
 static void CloseRom(void);
@@ -752,8 +756,12 @@ struct EMUCMDTABLE FCEUI_CommandTable[]=
 	{ EMUCMD_MISC_DISPLAY_MOVIESUBTITLES,	EMUCMDTYPE_MISC,	MovieSubtitleToggle,0,0,"Toggle Movie Subtitles", 0},
 	{ EMUCMD_MISC_UNDOREDOSAVESTATE,		EMUCMDTYPE_MISC,	UndoRedoSavestate,  0,0,"Undo/Redo Savestate",    0},
 	{ EMUCMD_MISC_TOGGLEFULLSCREEN,			EMUCMDTYPE_MISC,	ToggleFullscreen, 0, 0, "Toggle Fullscreen",	  0},
-	{ EMUCMD_TOOL_OPENRAMWATCH,				EMUCMDTYPE_TOOL,	LaunchRamWatch,   0, 0, "Open Ram Watch",		  0},
+	{ EMUCMD_TOOL_OPENRAMWATCH,				EMUCMDTYPE_TOOL,	LaunchRamWatch,	  0, 0, "Open Ram Watch",		  0},
 	{ EMUCMD_TOOL_OPENRAMSEARCH,			EMUCMDTYPE_TOOL,	LaunchRamSearch,  0, 0, "Open Ram Search",		  0},
+	{ EMUCMD_CHEAT_SEARCHEQ,				EMUCMDTYPE_TOOL,	CheatSearchEQ,	  0, 0, "Cheat Search Equal",		  0},
+	{ EMUCMD_CHEAT_SEARCHNE,				EMUCMDTYPE_TOOL,	CheatSearchNE,	  0, 0, "Cheat Search Not Equal",		  0},
+	{ EMUCMD_CHEAT_SEARCHGT,				EMUCMDTYPE_TOOL,	CheatSearchGT,	  0, 0, "Cheat Search Greater Than",		  0},
+	{ EMUCMD_CHEAT_SEARCHLT,				EMUCMDTYPE_TOOL,	CheatSearchLT,	  0, 0, "Cheat Search Less Than",		  0},
 };
 
 #define NUM_EMU_CMDS		(sizeof(FCEUI_CommandTable)/sizeof(FCEUI_CommandTable[0]))
@@ -951,6 +959,38 @@ static void LaunchRamSearch(void)
 #ifdef WIN32
 	extern void OpenRamSearch();
 	OpenRamSearch();
+#endif
+}
+
+static void CheatSearchEQ(void)
+{
+#ifdef WIN32
+	extern void CheatDialogSearchEQ();
+	CheatDialogSearchEQ();
+#endif
+}
+
+static void CheatSearchNE(void)
+{
+#ifdef WIN32
+	extern void CheatDialogSearchNE();
+	CheatDialogSearchNE();
+#endif
+}
+
+static void CheatSearchGT(void)
+{
+#ifdef WIN32
+	extern void CheatDialogSearchGT();
+	CheatDialogSearchGT();
+#endif
+}
+
+static void CheatSearchLT(void)
+{
+#ifdef WIN32
+	extern void CheatDialogSearchLT();
+	CheatDialogSearchLT();
 #endif
 }
 
