@@ -221,6 +221,10 @@ enum EMUCMD
 	EMUCMD_MISC_TOGGLEFULLSCREEN,
 	EMUCMD_TOOL_OPENRAMWATCH,
 	EMUCMD_TOOL_OPENRAMSEARCH,
+	EMUCMD_CHEAT_SEARCHEQ,
+	EMUCMD_CHEAT_SEARCHNE,
+	EMUCMD_CHEAT_SEARCHLT,
+	EMUCMD_CHEAT_SEARCHGT,
 	EMUCMD_MAX
 };
 
